fix(app-chat): scrollbar visibility in larger devices

--- a/src/@core/preset/preset/apps/chat.scss
+++ b/src/@core/preset/preset/apps/chat.scss
@@ -15,7 +15,7 @@
 }
 
 .ps-chat-left-sidebar {
-  height: calc(100% - 75px) !important;
+  height: calc(100% - 76px) !important;
 }
 
 // ————————————————————————————————————
